# usage-tray

./: .gitignore  CLAUDE_REVIEW_PROMPT.md  COLLECTOR-CONTRACT.md  LICENSE  PLAN.md  README.en.md  README.md  RESEARCH-datasource-20260707.md  REVIEW-20260707.md  SNAPSHOT-HISTORY.md  SPIKE-claude-oauth-20260708.md  SPIKE-codex-appserver-20260708.md  STATUS.md  WINDOWS-BUILD.md  codex-task-20260710-autostart-build.md  codex-task-20260710-oauth-refresh.md  codex-task-20260710-refresh-cooldown.md  codex-task-research-datasource.md  refresh-live-test-result.json  refresh-live-test.cmd
.claude/: launch.json
.github/workflows/: ci.yml
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/public/: sample-collector-output-v0.json  sample-history-v0.json
app/src/: main.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
collectors/: README.md  collect_limit_lens.py  collect_usage_tray.py  history_snapshot.py  telegram_bridge.py  test_collect_limit_lens_contract.py  test_collect_usage_tray_contract.py  test_telegram_bridge.py
docs/: COLLECTOR-CONTRACT.md  WINDOWS-BUILD.md
schemas/: collector-v0.schema.json
